force-app/main/default/objects/Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Causa</label>
    <type>TextArea</type>
</CustomField>