force-app/main/default/objects/Log__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>Código do Erro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>