force-app/main/default/objects/Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Mensagem de Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>