force-app/main/default/objects/Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>Tipo de Exceção</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>