force-app/main/default/objects/Log__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>Nome do Arquivo</label>
    <type>TextArea</type>
</CustomField>