force-app/main/default/objects/Log__c/fields/IntegrationSource__c.field-meta.xml
<CustomField>
    <fullName>IntegrationSource__c</fullName>
    <label>Integração de origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>