force-app/main/default/objects/Log__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>Número da Linha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>