force-app/main/default/objects/Log__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>Corpo da Resposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>