force-app/main/default/objects/Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>Rastreamento de Pilha</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>