force-app/main/default/objects/Log__c/fields/StatusLog__c.field-meta.xml
<CustomField>
    <fullName>StatusLog__c</fullName>
    <label>Status do log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falha</fullName>
            </value>
            <value>
                <fullName>Sucesso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>