force-app/main/default/objects/Log__c/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <description>Logs de exceção, em geral</description>
    <label>Exceção</label>
</RecordType>