force-app/main/default/objects/Log__c/recordTypes/Integration.recordType-meta.xml
<RecordType>
    <fullName>Integration</fullName>
    <active>true</active>
    <description>Logs cujo erro está em integração</description>
    <label>Integração</label>
</RecordType>