force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IntegrationSource__c</columns>
    <columns>StatusLog__c</columns>
    <columns>RelatedRecord__c</columns>
    <columns>Cause__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>StackTrace__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>