force-app/main/default/objects/Log__c/listViews/Excecao.listView-meta.xml
<ListView>
    <fullName>Excecao</fullName>
    <columns>NAME</columns>
    <columns>RelatedRecord__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>Cause__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>MethodName__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Exception</value>
    </filters>
    <label>Logs de Exceção</label>
</ListView>