force-app/main/default/objects/Log__c/listViews/LogsdeIntegracaoSucessoAUREA.listView-meta.xml
<ListView>
    <fullName>LogsdeIntegracaoSucessoAUREA</fullName>
    <columns>NAME</columns>
    <columns>RelatedRecord__c</columns>
    <columns>IntegrationSource__c</columns>
    <columns>User__c</columns>
    <columns>MethodName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Integration</value>
    </filters>
    <filters>
        <field>StatusLog__c</field>
        <operation>equals</operation>
        <value>Sucesso</value>
    </filters>
    <filters>
        <field>IntegrationSource__c</field>
        <operation>equals</operation>
        <value>aurea</value>
    </filters>
    <label>Logs de Integração - Sucesso [AUREA]</label>
</ListView>